# src/controllers/user/user.common.controller.ts
@@ -5,6 +5,8 @@ import user_common_handler from "../../handlers/user/user.common.handler";
 import { showResponse } from "../../utils/response.utils";
 import statusCodes from "../../constant/statusCodes";
 import { validate_contact_us } from "../../validator/user/user.common.validator";
+import { validate_get_internship_details } from "../../validator/admin/admin.internship.category.validator";
+import { validate_user_detail } from "../../validator/admin/admin.user.validator";
 
 @Tags('user common routes')
 @Route('/user/common')
@@ -32,6 +34,58 @@ export default class user_common_controller extends Controller {
     @Get('/usecase_listing')
     public async usecase_listing(@Query() data_type?: number): Promise<ApiResponse> {
         const res = user_common_handler.usecase_listing(data_type);
+        return res;
+    }
+
+    @Get('/privacy_terms_about_detail')
+    public async privacy_terms_about_detail(): Promise<ApiResponse> {
+        const res = user_common_handler.privacy_terms_about_detail();
+        return res;
+    }
+
+    @Get('/faq_listing')
+    public async faq_listing(): Promise<ApiResponse> {
+        const res = user_common_handler.faq_listing();
+        return res;
+    }
+
+
+    @Get('/work_together_detail')
+    public async work_together_detail(): Promise<ApiResponse> {
+        const res = user_common_handler.work_together_detail();
+        return res;
+    }
+
+    @Get('/internship_category_listing')
+    public async internship_category_listing(): Promise<ApiResponse> {
+        const res = user_common_handler.internship_category_listing();
+        return res;
+    }
+
+    @Get('/get_internship_details')
+    public async get_internship_details(@Query() internship_category_id: string): Promise<ApiResponse> {
+        const validate = validate_get_internship_details({ internship_category_id });
+        if (validate.error) {
+            return showResponse(false, validate.error.message, null, statusCodes.VALIDATION_ERROR);
+        }
+        const res = user_common_handler.get_internship_details(internship_category_id);
+        return res;
+    }
+
+    @Get('/detail')
+    public async detail(@Query() user_id:string): Promise<ApiResponse> {
+        const validate=validate_user_detail({user_id});
+        if(validate.error){
+            return showResponse(false, validate.error.message, null, statusCodes.VALIDATION_ERROR);   
+        }
+        const res = user_common_handler.detail(user_id);
+        return res;
+    }
+
+    @Security('Bearer')
+    @Get('/career_detail')
+    public async career_detail(): Promise<ApiResponse> {
+        const res = user_common_handler.career_detail();
         return res;
     }
 
